v0.0.1.3----最气人的一次提交,重写JavaFX加载逻辑,灵感来源于HMCL,版本自动下载不可用