@@ -1,13 +1,12 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-
 plugins {
     id("org.openjfx.javafxplugin") version "0.0.14"
     id("com.github.johnrengelman.shadow") version "8.1.1"
 }
-
+val ModuleList = listOf("javafx.base", "javafx.controls", "javafx.fxml", "javafx.web", "javafx.graphics")
 javafx {
-    version = "19.0.2.1"
-    modules("javafx.controls", "javafx.fxml", "javafx.web", "javafx.graphics")
+    version = "17.0.6"
+    setPlatform("windows")
+    modules = ModuleList
 }
 
 tasks.jar {
@@ -15,30 +14,42 @@ tasks.jar {
     dependsOn(tasks["shadowJar"])
 }
 
-
-tasks.withType<ShadowJar> {
-    manifest.attributes.apply {
-        put("Main-Class", "org.wdt.wdtc.WdtcMain")
+tasks.shadowJar {
+    minimize()
+    dependencies {
+        for (Module in ModuleList) {
+            exclude(dependency("org.openjfx:" + Module + ":" + javafx.version))
+        }
+    }
+    manifest {
+        attributes(
+            "Main-Class" to "org.wdt.wdtc.WdtcMain",
+            "Add-Opens" to listOf("java.base/jdk.internal.loader").joinToString(" ")
+        )
     }
 }
-val Version = "0.0.1.2"
+
+val Version = "0.0.1.3"
 tasks.create<JavaExec>("run") {
     dependsOn(tasks.jar)
     group = "application"
     version = Version
-    mainClass.set("org.wdt.wdtc.WdtcMain")
-    jvmArgs = listOf("-Dwdtc.config.path=.", "-Ddownload.forge.true", "-Dlauncher.version=$Version")
     classpath = files(tasks.shadowJar.get().archiveFile.get().asFile)
+    jvmArgs = listOf("-Dwdtc.config.path=.", "-Ddownload.forge.true", "-Dlauncher.version=$Version")
     workingDir = rootProject.rootDir
 }
 
 tasks.processResources {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
+tasks.compileJava<JavaCompile> {
+    options.compilerArgs.add("--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED")
+}
 
 dependencies {
     implementation(project(":WdtcCore"))
     implementation(project(":GsonOrFastJson"))
+    implementation(project(":DependencyDownloader"))
     implementation("commons-io:commons-io:2.13.0")
     implementation("log4j:log4j:1.2.17")
     implementation("com.google.code.gson:gson:2.10.1")
@@ -49,6 +60,8 @@ dependencies {
 
 
 tasks.test {
+    workingDir = rootDir
+    jvmArgs = listOf("-Dwdtc.config.path=.")
     useJUnitPlatform()
 }
 
